--- a/src/App/views/templates/name.html.twig
+++ b/src/App/views/templates/name.html.twig
@@ -5,7 +5,8 @@
     <title>Name</title>
 </head>
 <body>
-<p>Hello. This is {{ name }}.</p>
+<h3>Simply displaying the name</h3>
+<p>My name is the one and only {{ user.username }}</p>
 
 </body>
 </html>
