password field adjusted

--- a/src/App/views/templates/login.html.twig
+++ b/src/App/views/templates/login.html.twig
@@ -29,7 +29,8 @@
             width: 100px;
         }
 
-        form input[type="text"] {
+        form input[type="text"],
+        form input[type="password"] {
             width: 200px;
         }
 
@@ -49,7 +50,7 @@
     </div>
     <div>
         <label for="password">Password</label>
-        <input type="text" id="password" name="password">
+        <input type="password" id="password" name="password">
     </div>
     <div class="submit">
         <input type="submit" value="Log in">
