user creation template to twig + linked

--- a/src/App/views/templates/create-user-form.html.twig
+++ b/src/App/views/templates/create-user-form.html.twig
@@ -87,6 +87,10 @@
             <input type="submit" id="link-login" value="Log in">
         </form>
     </div>
+
+    <div>
+        <p>{{ message }}</p>
+    </div>
 </div>
 
 </body>
