new entry point home

--- a/src/App/views/templates/create-user-form.html.twig
+++ b/src/App/views/templates/create-user-form.html.twig
@@ -82,7 +82,7 @@
     </form>
 
     <div>
-        <form action="/login-form" method="post" class="link-login-form">
+        <form action="/login" method="post" class="link-login-form">
             <label for="link-login">Already having an account. Log in here:</label>
             <input type="submit" id="link-login" value="Log in">
         </form>
