--- a/src/App/views/templates/login.html.twig
+++ b/src/App/views/templates/login.html.twig
@@ -46,7 +46,7 @@
 </head>
 <body>
 <div class="background">
-    <form action="/login" method="post" class="login-form">
+    <form action="/logging-in" method="post" class="login-form">
 
         <div>
             <label for="username">Username</label>
@@ -63,7 +63,7 @@
     </form>
 
     <div>
-        <form action="/create-user-form" method="post" class="signup-form">
+        <form action="/signup" method="post" class="signup-form">
             <label for="submit-new-user">Not yet having an account. Create one here:</label>
             <input type="submit" id="submit-new-user" value="Create a new account">
         </form>
