--- a/src/App/views/templates/home.html.twig
+++ b/src/App/views/templates/home.html.twig
@@ -8,15 +8,7 @@
 </head>
 <body>
 
-<!-- Image and text -->
-<nav class="navbar navbar-light bg-light">
-    <a class="navbar-brand" href="/home">
-        <i class="fa-solid fa-chess-knight"></i>
-        minimal-dev
-    </a>
-    <a href="/" class="nav-link text-reset">{{ username }}</a>
-</nav>
-
+{{ include('_navbar.html.twig', {username: username}) }}
 
 <div class="container home">
     <div class="row mt-5" style="height: 500px;">
@@ -49,21 +41,10 @@
 
 </div>
 
-<div class="container">
-    <footer class="py-3 my-4">
-        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-            <li class="nav-item"><a target="_blank" href="https://www.payrexx.com/de/home/"
-                                    class="nav-link px-2 text-muted">Home</a></li>
-            <li class="nav-item"><a target="_blank" href="https://ch.linkedin.com/in/sven-otziger-75b18a212"
-                                    class="nav-link px-2 text-muted">Author</a></li>
-        </ul>
-        <p class="text-center text-muted">©<span id="year"></span> Payrexx AG</p>
-    </footer>
-</div>
+{{ include('_footer.html.twig') }}
 
 
 <script src="https://kit.fontawesome.com/a41dcf7e67.js" crossorigin="anonymous"></script>
-<script>document.getElementById('year').innerHTML = new Date().getFullYear().toString();</script>
 <div>
 
 </div>
