--- a/src/App/views/templates/home.html.twig
+++ b/src/App/views/templates/home.html.twig
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Home</title>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <style>{{ source('main.css') }}</style>
@@ -10,9 +11,9 @@
 
 {{ include('_navbar.html.twig', {username: username}) }}
 
-<div class="container home">
-    <div class="row mt-5" style="height: 500px;">
-        <div class="col p-5" style="background-color: rgba(165,40,52,0.2)">
+<div class="container">
+    <div class="row mt-5 temp-height">
+        <div class="col p-5 temp-bg">
 
             <p class="h5"><i class="fa-solid fa-user"></i><span class="tabulator"></span>User</p>
             <ul>
