--- a/src/App/views/templates/show-user.html.twig
+++ b/src/App/views/templates/show-user.html.twig
@@ -42,7 +42,7 @@
                 <input type="hidden" name="city" value="{{ user.city }}">
             </form>
 
-            <form action='/delete-user' method="post" name="user-deletion" class="mt-2">
+            <form action='/delete' method="post" name="user-deletion" class="mt-2">
                 <input type="hidden" name="id" value="{{ user.id }}">
                 <input type="hidden" name="username" value="{{ user.username }}">
                 <input type="submit" name="submit" value="Delete">
