update user form linking, named user overview /profile

--- a/src/App/views/templates/_navbar.html.twig
+++ b/src/App/views/templates/_navbar.html.twig
@@ -4,5 +4,5 @@
         <i class="fa-solid fa-chess-knight"></i>
         minimal-dev
     </a>
-    <a href="/user" class="nav-link text-reset">{{ username }}</a>
+    <a href="/profile" class="nav-link text-reset">{{ username }}</a>
 </nav>
