--- a/src/App/views/templates/home.html.twig
+++ b/src/App/views/templates/home.html.twig
@@ -17,7 +17,7 @@
 
             <p class="h5"><i class="fa-solid fa-user"></i><span class="tabulator"></span>User</p>
             <ul>
-                <li><a href="/user" class="text-reset">Visit Profile</a></li>
+                <li><a href="/profile" class="text-reset">Visit Profile</a></li>
                 <li><a href="/logout" class="text-reset">Logout</a></li>
             </ul>
 
