--- a/src/App/views/templates/update-user.html.twig
+++ b/src/App/views/templates/update-user.html.twig
@@ -36,7 +36,7 @@
 <div class="user-container">
 
     <div class="update-user">
-        <form action="/update-user" method="post" name="update-user">
+        <form action="/update" method="post" name="update-user">
             <input type="hidden" value="{{ user.id }}" name="id">
 
             <label for="username">Username</label>
