--- a/src/App/views/templates/login.html.twig
+++ b/src/App/views/templates/login.html.twig
@@ -1,79 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
     <title>Login</title>
-    <style>
-
-        html {
-            font-family: sans-serif;
-        }
-
-        body {
-            padding: 0;
-            margin: 5rem 2rem;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        .background {
-            background-color: rgba(13, 110, 253, 0.25);
-            width: 60%;
-            line-height: 2rem;
-            padding: 2rem;
-        }
-
-        form.login-form label {
-            display: inline-block;
-            width: 100px;
-        }
-
-        form.login-form input[type="text"],
-        form.login-form input[type="password"] {
-            width: 200px;
-        }
-
-        div.submit {
-            text-align: right;
-        }
-
-        form.signup-form {
-            font-size: .8rem;
-        }
-
-    </style>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <style>{{ source('main.css') }}</style>
 </head>
+
 <body>
-<div class="background">
-    <form action="/logging-in" method="post" class="login-form">
 
-        <div>
-            <label for="username">Username</label>
-            <input type="text" id="username" name="username">
-        </div>
-        <div>
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password">
-        </div>
-        <div class="submit">
-            <input type="submit" value="Log in">
-        </div>
+{{ include('_navbar.html.twig') }}
 
-    </form>
+<div class="container login">
+    <div class="row mt-5 temp-height">
+        <div class="col p-5 temp-bg">
 
-    <div>
-        <form action="/signup" method="post" class="signup-form">
-            <label for="submit-new-user">Not yet having an account. Create one here:</label>
-            <input type="submit" id="submit-new-user" value="Create a new account">
-        </form>
+            <form action="/logging-in" method="post" class="login-form">
+                <div>
+                    <label for="username">Username</label>
+                    <input type="text" id="username" name="username">
+                </div>
+                <div>
+                    <label for="password">Password</label>
+                    <input type="password" id="password" name="password">
+                </div>
+                <div class="submit">
+                    <input type="submit" value="Log in">
+                </div>
+
+            </form>
+
+            <form action="/signup" method="post" class="signup-form">
+                <label for="submit-new-user">Not yet having an account. Create one here:</label>
+                <input type="submit" id="submit-new-user" value="Create a new account">
+            </form>
+
+            {% if message %}
+                <p class="mt-5"><i class="fa-solid fa-info"></i> {{ message }}</p>
+            {% endif %}
+
+        </div>
     </div>
 </div>
 
+{{ include('_footer.html.twig') }}
 
-<div>
-    <p>{{ message }}</p>
-</div>
-
+<script src="https://kit.fontawesome.com/a41dcf7e67.js" crossorigin="anonymous"></script>
 </body>
 </html>
