--- a/src/App/views/templates/show-user.html.twig
+++ b/src/App/views/templates/show-user.html.twig
@@ -48,6 +48,10 @@
                 <input type="submit" name="submit" value="Delete">
             </form>
 
+            <form action="/home" method="post" class="mt-2">
+                <input type="submit" value="Main Menu">
+            </form>
+
         </div>
     </div>
 </div>
