--- a/src/App/views/templates/update-user.html.twig
+++ b/src/App/views/templates/update-user.html.twig
@@ -1,89 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Profile</title>
     <meta charset="UTF-8">
-    <title>Index</title>
-    <style>
-
-        .user-container {
-            display: flex;
-            flex-direction: column;
-            flex-wrap: wrap;
-        }
-
-        .update-user {
-            margin: 25px;
-            width: 800px;
-            background-color: rgba(11, 94, 215, 0.2);
-            padding: 1rem;
-        }
-
-        .update-user label {
-            display: inline-block;
-            width: 150px;
-            margin-bottom: 10px;
-        }
-
-        .update-user input[type='text'] {
-            width: 200px;
-        }
-
-    </style>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <style>{{ source('main.css') }}</style>
 </head>
+
+
+<style>
+
+    .update-user label {
+        display: inline-block;
+        width: 150px;
+        margin-bottom: 10px;
+    }
+
+    .update-user input[type='text'] {
+        width: 200px;
+    }
+
+</style>
+
 <body>
-<h3>Edit User</h3>
 
-<div class="user-container">
+{{ include('_navbar.html.twig', {username: user.username }) }}
 
-    <div class="update-user">
-        <form action="/update" method="post" name="update-user">
-            <input type="hidden" value="{{ user.id }}" name="id">
+<div class="container update-user">
+    <div class="row mt-5 temp-height">
+        <div class="col p-5 temp-bg">
 
-            <label for="username">Username</label>
-            <input type="text" value="{{ user.username }}" id="username" name="username">
-            <br>
+            <form action="/update" method="post" name="update-user">
+                <input type="hidden" value="{{ user.id }}" name="id">
 
-            <label for="password">Password</label>
-            <input type="text" value="{{ user.password }}" id="password" name="password">
-            <br><br>
+                <label for="username">Username</label>
+                <input type="text" value="{{ user.username }}" id="username" name="username">
+                <br>
 
-            <label for="age">Age</label>
-            <input type="text" value="{{ user.age }}" id="age" name="age">
-            <br><br>
+                <label for="password">Password</label>
+                <input type="text" value="{{ user.password }}" id="password" name="password">
+                <br><br>
 
-            <label for="street">Street</label>
-            <input type="text" value="{{ user.street }}" id="street" name="street">
-            <br>
+                <label for="age">Age</label>
+                <input type="text" value="{{ user.age }}" id="age" name="age">
+                <br><br>
 
-            <label for="zip_code">Zip</label>
-            <input type="text" value="{{ user.zip_code }}" id="zip_code" name="zip_code">
-            <br>
+                <label for="street">Street</label>
+                <input type="text" value="{{ user.street }}" id="street" name="street">
+                <br>
 
-            <label for="house_number">House number</label>
-            <input type="text" value="{{ user.house_number }}" id="house_number" name="house_number">
-            <br>
+                <label for="zip_code">Zip</label>
+                <input type="text" value="{{ user.zip_code }}" id="zip_code" name="zip_code">
+                <br>
 
-            <label for="city">City</label>
-            <input type="text" value="{{ user.city }}" id="city" name="city">
-            <br>
+                <label for="house_number">House number</label>
+                <input type="text" value="{{ user.house_number }}" id="house_number" name="house_number">
+                <br>
 
-            <input type="submit" value="Update" name="submit">
+                <label for="city">City</label>
+                <input type="text" value="{{ user.city }}" id="city" name="city">
+                <br>
 
-        </form>
+                <input type="submit" value="Update" name="submit" class="mt-2">
+            </form>
 
-        <form action="/profile" method="post" name="back">
+            <form action="/profile" method="post" name="cancel" class="mt-2">
+                <input type="submit" value="Cancel">
+            </form>
 
-            <input type="submit" value="Back">
+            {% if message %}
+                <p class="mt-5"><i class="fa-solid fa-info"></i> {{ message }}</p>
+            {% endif %}
 
-
-        </form>
+        </div>
     </div>
-
-    <div>
-        <p>{{ message }}</p>
-    </div>
-
 </div>
 
+
+{{ include('_footer.html.twig') }}
+
+<script src="https://kit.fontawesome.com/a41dcf7e67.js" crossorigin="anonymous"></script>
 </body>
 </html>
