create view all users, add username to session

--- a/src/App/views/templates/home.html.twig
+++ b/src/App/views/templates/home.html.twig
@@ -24,7 +24,7 @@
             {% if permissions.r_other_users %}
                 <p class="h5 pt-3"><i class="fa-solid fa-users"></i><span class="tabulator"></span>Manage Users</p>
                 <ul>
-                    <li><a href="" class="text-reset">Visit Profile Overview</a></li>
+                    <li><a href="/overview" class="text-reset">Visit Profile Overview</a></li>
                 </ul>
             {% endif %}
 
