--- a/src/App/views/templates/show-all-users.html.twig
+++ b/src/App/views/templates/show-all-users.html.twig
@@ -17,7 +17,7 @@
             <p class="h4 mb-4">All Profiles</p>
             {% if permissions.r_other_users %}
 
-                <table class="table table-striped">
+                <table class="table table-striped table-hover">
                     <thead>
                     <tr>
                         <th scope="col">Username</th>
@@ -31,22 +31,41 @@
                     </thead>
 
                     <tbody>
-                    {% for user in users %}
-                        <tr>
-                            <td>{{ user.username }}</td>
-                            <td>{{ user.description }}</td>
-                            <td>{{ user.street }}</td>
-                            <td>{{ user.house_number }}</td>
-                            <td>{{ user.zip_code }}</td>
-                            <td>{{ user.city }}</td>
-                            <td>{{ user.age }}</td>
-                        </tr>
-                    {% endfor %}
+                    {% if permissions.u_other_users and permissions.d_other_users %}
+                        {# allowed to edit/delete other accounts #}
+                        {% for user in users %}
+                            <tr>
+                                <td>{{ user.username }}</td>
+                                <td>{{ user.description }}</td>
+                                <td>{{ user.street }}</td>
+                                <td>{{ user.house_number }}</td>
+                                <td>{{ user.zip_code }}</td>
+                                <td>{{ user.city }}</td>
+                                <td>{{ user.age }}</td>
+                                <td><a href="/profile/{{ user.id }}" class="text-reset"><i
+                                                class="fa-solid fa-pen-to-square"></i></a></td>
+
+                            </tr>
+                        {% endfor %}
+                    {% else %}
+                        {# just allowed to read other users #}
+                        {% for user in users %}
+                            <tr>
+                                <td>{{ user.username }}</td>
+                                <td>{{ user.description }}</td>
+                                <td>{{ user.street }}</td>
+                                <td>{{ user.house_number }}</td>
+                                <td>{{ user.zip_code }}</td>
+                                <td>{{ user.city }}</td>
+                                <td>{{ user.age }}</td>
+                            </tr>
+                        {% endfor %}
+                    {% endif %}
                     </tbody>
 
                 </table>
             {% else %}
-                <p>Your account is not authorized to show the required data.</p>
+                <p>Your account is not authorized to show the requested data.</p>
             {% endif %}
             <form action="/home" method="post" class="mt-2">
                 <input type="submit" value="Main Menu">
