--- a/src/App/views/templates/show-all-users.html.twig
+++ b/src/App/views/templates/show-all-users.html.twig
@@ -15,6 +15,7 @@
     <div class="row mt-5 temp-height">
         <div class="col p-5 temp-bg">
             <p class="h4 mb-4">All Profiles</p>
+            <p>{{ message }}</p>
             {% if permissions.r_other_users %}
 
                 <table class="table table-striped table-hover">
@@ -31,8 +32,6 @@
                     </thead>
 
                     <tbody>
-                    {% if permissions.u_other_users and permissions.d_other_users %}
-                        {# allowed to edit/delete other accounts #}
                         {% for user in users %}
                             <tr>
                                 <td>{{ user.username }}</td>
@@ -42,25 +41,10 @@
                                 <td>{{ user.zip_code }}</td>
                                 <td>{{ user.city }}</td>
                                 <td>{{ user.age }}</td>
-                                <td><a href="/profile/{{ user.id }}" class="text-reset"><i
-                                                class="fa-solid fa-pen-to-square"></i></a></td>
+                                <td><a href="/profile/{{ user.id }}" class="text-reset"><i class="fa-solid fa-eye"></i></a></td>
 
                             </tr>
                         {% endfor %}
-                    {% else %}
-                        {# just allowed to read other users #}
-                        {% for user in users %}
-                            <tr>
-                                <td>{{ user.username }}</td>
-                                <td>{{ user.description }}</td>
-                                <td>{{ user.street }}</td>
-                                <td>{{ user.house_number }}</td>
-                                <td>{{ user.zip_code }}</td>
-                                <td>{{ user.city }}</td>
-                                <td>{{ user.age }}</td>
-                            </tr>
-                        {% endfor %}
-                    {% endif %}
                     </tbody>
 
                 </table>
