--- a/src/App/views/templates/show-user.html.twig
+++ b/src/App/views/templates/show-user.html.twig
@@ -18,7 +18,7 @@
     <div class="row mt-5 temp-height">
         <div class="col p-5 temp-bg">
             {% if not isForeignProfile or
-                (isForeignProfile and permissions.r_other_users and permissions.u_other_users and permissions.d_other_users) %}
+                (isForeignProfile and permissions.r_other_users) %}
                 <p class="h4 mb-4">{{ user.username }}</p>
                 {% set array = {
                     ('Age'): user.age,
@@ -33,33 +33,37 @@
                     {% endif %}
                 {% endfor %}
 
-                <form action="/edit" method="post" name="render-edit" class="mt-5">
-                    <input type="submit" name="submit" value="Edit">
+                {% if isForeignProfile and permissions.u_other_users %}
+                    <form action="/edit" method="post" name="render-edit" class="mt-5">
+                        <input type="submit" name="submit" value="Edit">
 
-                    <input type="hidden" name="id" value="{{ user.id }}">
-                    <input type="hidden" name="username" value="{{ user.username }}">
-                    <input type="hidden" name="password" value="{{ user.password }}">
-                    <input type="hidden" name="age" value="{{ user.age }}">
-                    <input type="hidden" name="street" value="{{ user.street }}">
-                    <input type="hidden" name="zip_code" value="{{ user.zip_code }}">
-                    <input type="hidden" name="house_number" value="{{ user.house_number }}">
-                    <input type="hidden" name="city" value="{{ user.city }}">
-                </form>
+                        <input type="hidden" name="id" value="{{ user.id }}">
+                        <input type="hidden" name="username" value="{{ user.username }}">
+                        <input type="hidden" name="password" value="{{ user.password }}">
+                        <input type="hidden" name="age" value="{{ user.age }}">
+                        <input type="hidden" name="street" value="{{ user.street }}">
+                        <input type="hidden" name="zip_code" value="{{ user.zip_code }}">
+                        <input type="hidden" name="house_number" value="{{ user.house_number }}">
+                        <input type="hidden" name="city" value="{{ user.city }}">
+                    </form>
+                {% endif %}
 
-                <form action='/delete' method="post" name="user-deletion" class="mt-2">
-                    <input type="hidden" name="id" value="{{ user.id }}">
-                    <input type="hidden" name="username" value="{{ user.username }}">
-                    <input type="submit" name="submit" value="Delete">
-                </form>
+                {% if isForeignProfile and permissions.d_other_users %}
+                    <form action='/delete' method="post" name="user-deletion" class="mt-2">
+                        <input type="hidden" name="id" value="{{ user.id }}">
+                        <input type="hidden" name="username" value="{{ user.username }}">
+                        <input type="submit" name="submit" value="Delete">
+                    </form>
+                {% endif %}
 
                 {% if isForeignProfile %}
                     <form action="/overview" method="post" class="mt-2">
                         <input type="submit" value="Back">
                     </form>
-                    {#                {% else %} #}
-                    {#                    <form action="/home" method="post" class="mt-2"> #}
-                    {#                        <input type="submit" value="Main Menu"> #}
-                    {#                    </form> #}
+                {% else %}
+                    <form action="/home" method="post" class="mt-2">
+                        <input type="submit" value="Main Menu">
+                    </form>
                 {% endif %}
             {% else %}
                 <p>Your account is not authorized to show the requested data.</p>
