--- a/src/App/views/templates/login.html.twig
+++ b/src/App/views/templates/login.html.twig
@@ -33,8 +33,8 @@
             </form>
 
             <form action="/signup" method="post" class="signup-form">
-                <label for="submit-new-user">Not yet having an account. Create one here:</label>
-                <input type="submit" id="submit-new-user" value="Create a new account">
+                <p class="d-inline-block">Not yet having an account. Create one here:</p>
+                <input type="submit" value="Create a new account">
             </form>
 
             {% if message %}
