add role to signup with default in DB

--- a/src/App/views/templates/create-user-form.html.twig
+++ b/src/App/views/templates/create-user-form.html.twig
@@ -24,7 +24,7 @@
                 </div>
                 <div>
                     <label for="password">Password</label>
-                    <input type="text" id="password" name="password">
+                    <input type="password" id="password" name="password">
                 </div>
                 <div>
                     <label for="age">Age</label>
@@ -45,6 +45,14 @@
                 <div>
                     <label for="city">City</label>
                     <input type="text" id="city" name="city">
+                </div>
+                <div>
+                    <label for="role">Role</label>
+                    <select name="role" id="role">
+                        {% for role in roles %}
+                            <option value="{{ role.id }}">{{ role.description|capitalize }}</option>
+                        {% endfor %}
+                    </select>
                 </div>
                 <div class="submit">
                     <input type="submit" value="Create User">
