views: single and all movies, prepare links

--- a/src/App/views/templates/main.css
+++ b/src/App/views/templates/main.css
@@ -7,7 +7,7 @@ span.tabulator {
     width: 12px;
 }
 
-span.profile-tabulator {
+span.wide-tabulator {
     display: inline-block;
     width: 125px;
 }
