--- a/src/App/views/templates/show-user.html.twig
+++ b/src/App/views/templates/show-user.html.twig
@@ -29,7 +29,7 @@
                 } %}
                 {% for key, value in array %}
                     {% if value != '' or value != 0 %}
-                        <p><span class="profile-tabulator">{{ key }}</span>{{ value }}</p>
+                        <p><span class="wide-tabulator">{{ key }}</span>{{ value }}</p>
                     {% endif %}
                 {% endfor %}
 
