movie view button back to overview

--- a/src/App/views/templates/show-movie.html.twig
+++ b/src/App/views/templates/show-movie.html.twig
@@ -42,6 +42,10 @@
                 </form>
             {% endif %}
 
+            <form action='/movies' method="post" name="back-movie-overview" class="mt-2">
+                <input type="submit" name="submit" value="Back">
+            </form>
+
         </div>
     </div>
 </div>
