--- a/src/App/views/templates/update-user.html.twig
+++ b/src/App/views/templates/update-user.html.twig
@@ -11,13 +11,13 @@
 
 <style>
 
-    .update-user label {
+    .update-form label {
         display: inline-block;
         width: 150px;
         margin-bottom: 10px;
     }
 
-    .update-user input[type='text'] {
+    .update-form input[type='text'] {
         width: 200px;
     }
 
@@ -32,7 +32,7 @@
 {% endif %}
 
 
-<div class="container update-user">
+<div class="container update-form">
     <div class="row mt-5 temp-height">
         <div class="col p-5 temp-bg">
             {% if not isForeignUser or
